# industry-value-flow

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  config.py  main.py
backend/domain/: llm_coalescer.py  prompt_builder.py  rate_limiter.py  token_budget.py
backend/domain/graph/: graph_service.py
backend/domain/llm/: base.py  claude.py  deepseek.py  minimax.py  ollama.py  openai.py  openai_compatible.py  registry.py
backend/domain/scraper/: base.py  industry_association.py  stats_gov.py
backend/domain/storage/: cache.py  graph_repo.py  llm_cache.py
backend/routes/: graph.py  industries.py  industry.py  llm.py  settings.py
backend/schema/: __init__.py  ai_help.py  gbt4754.py  graph.py  industry.py  pain_point.py  sankey.py  settings.py
backend/schemas/: api.py
backend/tests/integration/: test_main_startup_resilience.py  test_routes_graph.py  test_routes_industries.py  test_routes_llm.py  test_routes_settings.py  test_settings_routes.py
backend/tests/unit/: test_graph_service.py  test_llm_claude.py  test_llm_coalescer.py  test_llm_deepseek.py  test_llm_minimax.py  test_llm_ollama.py  test_llm_openai.py  (+18 more)
deploy/: install-public-nginx.sh  nginx-industry-intelab.conf
docs/deploy/: arch-feedback.md  ivf-deploy-guide.md
frontend/: Dockerfile  index.html  nginx.conf  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: global.d.ts  main.tsx  test-setup.ts
scripts/: set-gh-secrets.py
(+60 files in other folders)
